Fix titles and social icons on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -232,8 +232,13 @@
         float: right;
 
         li {
-            display: inline-block;
-            margin: 0 0.25rem;
+            // display: inline-block;
+            margin: 0;
+            padding: 0 !important;
+
+            @include media($eui-bkp-mobile-up) {
+                margin: 0 0.25rem;
+            }
 
             &:before {
                 display: none;
@@ -252,8 +257,8 @@
 
         a {
             display: inline-block;
-            width: 2.5rem;
-            height: 2.5rem;
+            width: 2rem;
+            height: 2rem;
             border-radius: 6%;
             text-decoration: none;
             color: white;
@@ -264,10 +269,10 @@
                 facebook: (char: "\f09a", color: #3b5998),
                 instagram: (char: "\f16d", color: #3b5998),
                 youtube: (char: "\f16a", color: #3b5998),
-                flickr: (char: "\f16e", color: #3b5998),
+                linkedin: (char: "\f0e1", color: #3b5998),
+                // flickr: (char: "\f16e", color: #3b5998),
                 // google:   (char: "\f0d5", color: #dd4b39),
                 // github:   (char: "\f09b", color: #231f20),
-                // linkedin: (char: "\f0e1", color: #0977b5),
                 // dribbble: (char: "\f17d", color: #ea4c89),
                 // rss:      (char: "\f09e", color: #ff6600)
             );
