--- a/src/app/features/projects/projects.component.scss
+++ b/src/app/features/projects/projects.component.scss
@@ -88,7 +88,6 @@
             }
     }
 
-
     .prjt-box {
         background: #ebebeb;
         border-radius: 6px;
@@ -363,21 +362,20 @@
                 }
 
                 &:nth-child(2) {
-                    width: 49%;
+                    width: 61%;
                     float: left;
 
                     @include media($eui-bkp-mobile-up) {
-                        width: 25%;
+                        width: 28%;
                         float: none;
                     }
                 }
 
                 &:nth-child(3) {
-                    width: 50%;
                     float: left;
 
                     @include media($eui-bkp-mobile-up) {
-                        width: 27%;
+                        width: 20%;
                         float: none;
                     }
                 }
